test/fails/bad_types/mat_add.lgl
mat2x2 m1 = [[1., 2.], [1., 2.]];
print m1 + [[1., 2.], [1., 2.], [1., 2.]];